Updating DNS name in form - subject

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="section-title">Contact Me</h2>
             <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="2c5f70ce-7ec4-4979-a880-093c626796a3">
-                <input type="hidden" name="subject" value="New Inquiry from thebitcoinmoney.com">
+                <input type="hidden" name="subject" value="New Inquiry from bitcoinstash.io">
                 
                 <div id="form-messages"></div>
                 
